[package]
name = "steamworks"
version = "0.11.0"
authors = ["Thinkofname"]
description = "Provides rust friendly bindings to the steamworks sdk"
license = "MIT / Apache-2.0"
repository = "https://github.com/Noxime/steamworks-rs"
documentation = "https://docs.rs/steamworks"
keywords = ["steam", "gamedev"]
categories = ["games"]
edition = "2021"
rust-version = "1.71.1"

[features]
default = []
raw-bindings = []
image = ["dep:image"]

[workspace]
members = [
    "./steamworks-sys",
    "examples/chat-example",
    "examples/workshop"
]

[dependencies]
steamworks-sys = { path = "./steamworks-sys", version = "0.11.0" }
thiserror = "1.0"
bitflags = "1.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
image = { version = "0.25.1", optional = true, default-features = false }

[dev-dependencies]
serial_test = "1"
