[package]
name = "steamworks-sys"
version = "0.8.0"
authors = ["Thinkofname"]
build = "build.rs"
description = "Provides raw bindings to the steamworks sdk"
license = "MIT / Apache-2.0"
repository = "https://github.com/Noxime/steamworks-rs"
documentation = "https://docs.rs/steamworks-sys"
edition = "2018"

[package.metadata.docs.rs]
features = [ "docs-only" ]


[features]
default = []
rebuild-bindings = []

[dependencies]

[build-dependencies]
bindgen = "0.59"
