[package]
name = "steamworks-sys"
version = "0.12.0"
authors = ["Thinkofname"]
build = "build.rs"
description = "Provides raw bindings to the steamworks sdk"
license = "MIT / Apache-2.0"
repository = "https://github.com/Noxime/steamworks-rs"
documentation = "https://docs.rs/steamworks-sys"
edition = "2021"
rust-version = "1.80.0"

[features]
default = []
rebuild-bindings = ["bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }
